[project]
name = "python-pocket"
version = "0.3.5"
description = "Python Pocket is a secure, lightweight, and extensible personal finance tracker built with `customtkinter`. It provides local encrypted storage, account management, transaction logging, and theming—all behind a password-protected interface."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "cryptography>=45.0.3",
    "customtkinter>=5.2.2",
    "matplotlib>=3.10.3",
    "tkcalendar>=1.6.1",
]
